2003-11-07 14:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSInputManager.m (-loadBindingsFromFile:): Handle errors
	directly instead of using (broken) exception code.

2003-11-01 18:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m (-drawGlyphsForGlyphRange:atPoint:):
	If a range of glyphs has no color set, use the default text color
	(as returned by [NSColor textColor]) instead of assuming black.

2003-10-30 00:38  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSImage.m (iterate_reps_for_types, repd_for_rep): Make
	static.
	* Source/NSStepperCell.m (DrawUpButton, DrawDownButton,
	HighlightUpButton, HighlightDownButton): Idem.

	* Source/NSPrintInfo.m: Make the "class variables" static.
	* Source/NSProgressIndicator.m: Idem.

2003-10-29  Bjorn Giesler <bjoern@giesler.de>

	* Source/externs.m: New MacOS 10.3 pasteboard types
	* Headers/AppKit/NSPasteboard.h: New MacOS 10.3 pasteboard types

2003-10-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDisplayServer.m: ([-dealloc]) remove deallocated server
	from windowsmap to avoid segfault on app shuytdown ... fix suggested
	by benhur@inf.ufsm.br

2003-10-29 02:22  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSServicesManager.m (-updateServicesMenu): Always enable
	an item with a submenu.

2003-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSavePanel.m: Change to have entire window accept DnD.
	* Source/NSWindow.m: Fix to get whole window DnD working, also
	to enable propogation of drag events up the view hierarchy to the
	first drag-aware view ... Adam reports that this seems to be the
	behavior on MacOS-X too.

2003-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOpenPanel.m: Allow users to type in an absolute path name.
	Support DnD of filename into panel.
	* Source/NSSavePanel.m: ditto.  Also, if the name of a non-existent
	directory is typed in, provide a prompt to create the directory as
	in NeXTstep/OPENSTEP.
